--- a/config/locales/home_page.en.yml
+++ b/config/locales/home_page.en.yml
@@ -2,6 +2,7 @@ en:
   home_pages:
     show:
       heading: Find a prisoner
+      logged_in: You're now logged into the Moving People Safely service and ready to start using the digital PER.
       description: To initiate a PER for a prisoner enter the prisoner number and click 'Search'
       create_escort_button: Create new escort record
       search_label: Enter a prison number
