--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -27,11 +27,11 @@ en:
         cat_a: CAT A
       healthcare_information:
         title: Healthcare information
-        acct: ACCT open
         notes: Section A3 Healthcare information
     coversheet_checkboxes:
       no_label: 'No'
       yes_label: 'Yes'
+      open_acct: ACCT open
       violence: Violence
       escape: Escort escape risk
       non_association: Non-association
