Introduce 'Property, cash and medication details'
Reflects latest design, replacing previous 'Property details' heading.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -127,7 +127,7 @@ en:
       warrant: Warrant
     record_of_handover:
       heading: B2. Record of handover
-      property_details: Property details
+      property_details: Property, cash and medication details
       instructions: Use a property code from the following list
       valuables: Valuables
       in_possession: In possession
