Remove superfluous 'information' suffix from forms
Now that we have consistent form & model names we can remove superflous
suffixes from the forms (this also applies to the pdf parts of the application
too).

--- a/config/locales/_shared.en.yml
+++ b/config/locales/_shared.en.yml
@@ -11,13 +11,13 @@ en:
     forenames: Forenames
     medical_professional: Name of medical professional filling in this section
     month_label: Month
-    move_information_heading: Move Information
+    move_heading: Move Information
     name: Name (print)
     nationality: Nationality
     origin: From
     pnc_number: PNC number
     prison_number: Prison number
-    prisoner_information_heading: Prisoner Information
+    prisoner_heading: Prisoner Information
     reason: Reason
     sex: Sex
     signature: Signature
