--- a/config/locales/move.en.yml
+++ b/config/locales/move.en.yml
@@ -1,18 +1,18 @@
 en:
   helpers:
     label:
-      move_information:
+      move:
         origin: :'shared.origin'
         destination: :'shared.destination'
         reason: Reason for move (current offence)
   escorts:
-    move_information:
-      heading: :'shared.move_information_heading'
+    move:
+      heading: :'shared.move_heading'
       default_origin: HMP Bedford
   activemodel:
     errors:
       models:
-        move_information:
+        move:
           attributes:
             date_of_travel:
               invalid: invalid date provided
