Add 'no property' markers to PDF from latest design
The latest design iteration introduces these markers for the
outward in return journeys.

Add 'no property' markers to PDF from latest design

The latest design iteration introduces these markers for the
outward in return journeys.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -131,6 +131,8 @@ en:
     record_of_handover:
       heading: B2. Record of handover
       property_details: Property, cash and medication details
+      property_outward_journey: No property on OUTWARD journey
+      property_return_journey: No property on RETURN journey
       instructions: Use a property code from the following list
       valuables: Valuables
       in_possession: In possession
