--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -39,8 +39,9 @@ en:
       allergies: Allergies
       disabilities: Disabilities
     prisoner:
-      photo_message: Attach photo
-      names: Names
+      photo_message: Attach photo here
+      family_name: Family name
+      forenames: Forenames
       dob: :'shared.date_of_birth'
       age: :'shared.age'
       sex: :'shared.sex'
@@ -48,6 +49,7 @@ en:
       nationality: :'shared.nationality'
       cro_number: :'shared.cro_number'
       pnc_number: :'shared.pnc_number'
+      aliases: Aliases
     updates:
       title: Risk updates
       instructions: Include relevant updates and heightened risks from section B3
