--- a/config/locales/prisoner.en.yml
+++ b/config/locales/prisoner.en.yml
@@ -1,8 +1,8 @@
 en:
   prisoner:
     has_aliases:
-      title: Aliases
-      help_text: Add stuff about aliases here mate
+      title: Does the detainee have any significant aliases?
+      help_text: List any other names by which the detainee is known
     labels:
       clear: Clear selection
   helpers:
@@ -16,6 +16,7 @@ en:
         pnc_number: :'shared.pnc_number'
   escorts:
     prisoner:
+      alias: Alias
       heading: :'shared.prisoner_heading'
       sex:
         label: Sex
