Add front-end for offence multiples
Introduces JavaScript, CSS and scaffolding markup for offence
multiples. This includes a refactoring of the multiples jQuery
plugin and associated styles.

--- a/config/locales/pdf.en.yml
+++ b/config/locales/pdf.en.yml
@@ -109,7 +109,7 @@ en:
       no_medication: No medication
       medication_heading: Medication details
       medication_description: Medication description
-      medication_carried_by: Medication travels with
+      medication_carrier: Medication travels with
       medication_administration_info: Administration information
       escort: Escort
       prisoner: Prisoner
