--- a/config/locales/healthcare.en.yml
+++ b/config/locales/healthcare.en.yml
@@ -36,7 +36,7 @@ en:
     mpv_required: Do they need an MPV?
     medication:
       administration: Medication administration
-      carried_by: Carried by
+      carrier: Carried by
       description: Medication description
       details_help_text: If yes, give details of the medication needed and how it is administered. Give details of how the issues might be a risk during the move.
       help_text: Does the prisoner need medication?
