--- a/config/locales/home_page.en.yml
+++ b/config/locales/home_page.en.yml
@@ -1,24 +1,18 @@
 en:
-  home_pages:
-    show:
-      heading: Find a prisoner
-      logged_in: You're now logged into the Moving People Safely service and ready to start using the digital PER.
-      description: |
-        To initiate a PER for a prisoner enter the prisoner number and search to view any existing records.
-        If there are no records, you will be given the opportunity to start a new one.
-      create_escort_button: Create new escort record
-      search_label: Enter a prison number
-      search_hint: Eg A1234BC
-      search_error: Enter a valid prison number
-      search_button: Search
-    search:
-      no_result:
-        heading: Search results
-        no_results: There are no previously created PERs for prisoner number %{prison_number}
-        initiate_new_per: Initiate new PER
-      result:
-        heading: Search results
-        prison_number: Prisoner number
-        prisoner_name: Prisoner name
-        date_of_birth: Date of birth
-        last_edited: PER last edited
+  search:
+    heading: Find a prisoner
+    logged_in: You're now logged into the Moving People Safely service and ready to start using the digital PER.
+    description: |
+      To initiate a PER for a prisoner enter the prisoner number and search to view any existing records.
+      If there are no records, you will be given the opportunity to start a new one.
+    search_label: Enter a prison number
+    search_hint: Eg A1234BC
+    search_error: Enter a valid prison number
+    search_button: Search
+    results_heading: Search results
+    no_result_text: There are no previously created PERs for prisoner number %{prison_number}
+    initiate_new_per_button: Initiate new PER
+    prison_number: Prisoner number
+    prisoner_name: Prisoner name
+    date_of_birth: Date of birth
+    last_edited: PER last edited
